# panic-pretty

./: Cargo.toml  README.md
src/: formatter.rs  main.rs  parser.rs
tests/: integration_test.rs  parser_tests.rs
tests/fixtures/: go_panic.txt  node_error.txt  rust_panic.txt
